// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should open a drawer when a link is clicked 1`] = `
<div>
  <div
    className="a b c d e"
  >
    <div
      className="f a b g h i j"
    >
      <div
        className="c k"
      />
      <div
        className="a d l"
        role="tablist"
      >
        <a
          className="cf-link m n o p q r s t u"
          href="#!"
          id="card-2-drawer-one"
          onClick={[Function]}
          role="tab"
        >
          One
        </a>
        <a
          className="cf-link m n o p q r s t u"
          href="#!"
          id="card-2-drawer-two"
          onClick={[Function]}
          role="tab"
        >
          Two
        </a>
      </div>
    </div>
  </div>
  <div
    active={undefined}
    className="v"
  >
    <div
      className="w x"
      id={undefined}
      isActive={false}
      onClick={undefined}
    />
    <div
      className="w x"
      id={undefined}
      isActive={false}
      onClick={undefined}
    />
  </div>
</div>
`;

exports[`should open a drawer when a link is clicked 2`] = `
"
.a {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex
}

.b {
  align-items: center;
  -webkit-box-align: center;
  -webkit-align-items: center
}

.c {
  flex: 1;
  -webkit-flex: 1
}

.d {
  justify-content: flex-end;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end
}

.e {
  border-top: 1px solid #dedede
}

.f {
  min-height: 2.96666rem
}

.g {
  width: 100%
}

.h::after {
  content: ''
}

.i::after {
  display: table
}

.j::after {
  clear: both
}

.k {
  margin-left: 1em
}

.l {
  height: 100%
}

.m {
  display: inline-block
}

.n {
  margin-right: 1em
}

.o::after {
  display: inline-block
}

.p::after {
  content: '\\\\f003'
}

.q::after {
  font-family: \\"cloudflare-font\\"
}

.r::after {
  font-style: normal
}

.s::after {
  font-weight: normal
}

.t::after {
  transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -webkit-transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -moz-transition: transform 0.2s ease
}

.u::after {
  transform: initial;
  -webkit-transform: initial
}

.v {
  display: none
}

.w {
  border-top: initial
}

.x {
  padding: initial
}
"
`;

exports[`should render when given all the props 1`] = `
<div>
  <div
    className="a b c d e"
  >
    <div
      className="f a b g h i j"
    >
      <div
        className="c k"
      >
        <div>
          hello world
        </div>
      </div>
      <div
        className="a d l"
        role="tablist"
      >
        <a
          className="cf-link m n o p q r s t u"
          href="#!"
          id="card-0-drawer-one"
          onClick={[Function]}
          role="tab"
        >
          One
        </a>
        <a
          className="cf-link m n o p q r s t v"
          href="#!"
          id="card-0-drawer-two"
          onClick={[Function]}
          role="tab"
        >
          Two
        </a>
      </div>
    </div>
  </div>
  <div
    active="one"
    className="w"
  >
    <div
      className="e x"
      id={undefined}
      isActive={true}
      onClick={undefined}
    >
      One Content
    </div>
    <div
      className="y z"
      id={undefined}
      isActive={false}
      onClick={undefined}
    />
  </div>
</div>
`;

exports[`should render when given all the props 2`] = `
"
.a {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex
}

.b {
  align-items: center;
  -webkit-box-align: center;
  -webkit-align-items: center
}

.c {
  flex: 1;
  -webkit-flex: 1
}

.d {
  justify-content: flex-end;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end
}

.e {
  border-top: 1px solid #dedede
}

.f {
  min-height: 2.96666rem
}

.g {
  width: 100%
}

.h::after {
  content: ''
}

.i::after {
  display: table
}

.j::after {
  clear: both
}

.k {
  margin-left: 1em
}

.l {
  height: 100%
}

.m {
  display: inline-block
}

.n {
  margin-right: 1em
}

.o::after {
  display: inline-block
}

.p::after {
  content: '\\\\f003'
}

.q::after {
  font-family: \\"cloudflare-font\\"
}

.r::after {
  font-style: normal
}

.s::after {
  font-weight: normal
}

.t::after {
  transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -webkit-transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -moz-transition: transform 0.2s ease
}

.u::after {
  transform: rotate(90deg);
  -webkit-transform: rotate(90deg)
}

.v::after {
  transform: initial;
  -webkit-transform: initial
}

.w {
  display: block
}

.x {
  padding: 1.5rem
}

.y {
  border-top: initial
}

.z {
  padding: initial
}
"
`;

exports[`should render when not given props 1`] = `
<div>
  <div
    className="a b c d e"
  >
    <div
      className="f a b g h i j"
    >
      <div
        className="c k"
      />
      <div
        className="a d l"
        role="tablist"
      >
        <a
          className="cf-link m n o p q r s t u"
          href="#!"
          id="card-1-drawer-one"
          onClick={[Function]}
          role="tab"
        >
          One
        </a>
        <a
          className="cf-link m n o p q r s t u"
          href="#!"
          id="card-1-drawer-two"
          onClick={[Function]}
          role="tab"
        >
          Two
        </a>
      </div>
    </div>
  </div>
  <div
    active={undefined}
    className="v"
  >
    <div
      className="w x"
      id={undefined}
      isActive={false}
      onClick={undefined}
    />
    <div
      className="w x"
      id={undefined}
      isActive={false}
      onClick={undefined}
    />
  </div>
</div>
`;

exports[`should render when not given props 2`] = `
"
.a {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex
}

.b {
  align-items: center;
  -webkit-box-align: center;
  -webkit-align-items: center
}

.c {
  flex: 1;
  -webkit-flex: 1
}

.d {
  justify-content: flex-end;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end
}

.e {
  border-top: 1px solid #dedede
}

.f {
  min-height: 2.96666rem
}

.g {
  width: 100%
}

.h::after {
  content: ''
}

.i::after {
  display: table
}

.j::after {
  clear: both
}

.k {
  margin-left: 1em
}

.l {
  height: 100%
}

.m {
  display: inline-block
}

.n {
  margin-right: 1em
}

.o::after {
  display: inline-block
}

.p::after {
  content: '\\\\f003'
}

.q::after {
  font-family: \\"cloudflare-font\\"
}

.r::after {
  font-style: normal
}

.s::after {
  font-weight: normal
}

.t::after {
  transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -webkit-transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -moz-transition: transform 0.2s ease
}

.u::after {
  transform: initial;
  -webkit-transform: initial
}

.v {
  display: none
}

.w {
  border-top: initial
}

.x {
  padding: initial
}
"
`;
